[package]
name = "ueoffset-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "ueoffset_rs"
crate-type = ["cdylib"]


[dependencies]
windows-sys = { version = "0.60.2", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug"
] }
log = "0.4"
env_logger = "0.11.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }



[profile.dev]
opt-level = 0
lto = false
codegen-units = 10
panic = "abort"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false

[profile.release.package."*"]
opt-level = "z"
debug = false

[target.'cfg(target_os = "windows")'.dependencies]

[target.'cfg(target_os = "windows")'.profile.release]
# Дополнительные rustflags для уменьшения размера
rustflags = [
  "-C", "link-arg=-s",              # Strip symbols
  "-C", "target-cpu=native",        # Optimize for current CPU
  "-C", "link-arg=/DEFAULTLIB:msvcrt.lib",  # Link printf
]